--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
     <title></title>
   </head>
   <body>
+    <div class='canvas' style='position: relative;'>
     <canvas id="pacman-container"></canvas>
     <script src="./lib/bundle.js"></script>
   </body>
