Add more board logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class='canvas' style='position: relative;'>
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
+    </div>
     <canvas id="pacman-container"></canvas>
     <script src="./lib/bundle.js"></script>
   </body>
