--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title></title>
   </head>
   <body>
-    <div class='canvas' style='position: relative;'>
+
+    <canvas id="pacman-container" style="position:relative">
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
-    </div>
-    <canvas id="pacman-container"></canvas>
+    </canvas>
     <script src="./lib/bundle.js"></script>
   </body>
 </html>
