Finish building board walls

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
 
-    <canvas id="pacman-container" style="position:relative">
+    <div id="pacman-container" style="position:relative">
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
-    </canvas>
+    </div>
     <script src="./lib/bundle.js"></script>
   </body>
 </html>
