--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="application/javascript" src="vendor/keymaster.js"></script>
     <script type="application/javascript" src="./lib/board.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
     <title></title>
@@ -15,6 +16,7 @@
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>s
     </div>
+
     <script src="./lib/bundle.js"></script>
   </body>
 </html>
