--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="canvas" style="position:relative">
       <canvas id="dots-layer" style="position:absolute; z-index: -1;"></canvas>
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
+      <canvas id="blinky-layer" style="position:absolute; z-index: 1;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>s
     </div>
