--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="blinky-layer" style="position:absolute; z-index: 1;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
+      <canvas id="score-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>s
     </div>
 
