--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
 
     <div id="canvas" style="position:relative">
+      <canvas id = "menu-layer" style="position:absolute; z-index: 10; display:block"></canvas>
       <canvas id="dots-layer" style="position:absolute; z-index: -1;"></canvas>
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="blinky-layer" style="position:absolute; z-index: 1;"></canvas>
