--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body>
 
     <div id="canvas" style="position:relative">
-      <canvas id = "menu-layer" style="position:absolute; z-index: 10; display:block"></canvas>
       <canvas id="dots-layer" style="position:absolute; z-index: -1;"></canvas>
       <canvas id="grid-layer" style="position:absolute; z-index: 0;"></canvas>
       <canvas id="blinky-layer" style="position:absolute; z-index: 1;"></canvas>
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="score-layer" style="position:absolute; z-index: 2;"></canvas>
-      <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>s
+      <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>
+      <canvas id ="menu-layer" style="position:absolute; z-index: 10;"></canvas>
     </div>
 
     <script src="./lib/bundle.js"></script>
