Create pinky ghost logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <canvas id="level-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="score-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>
+      <canvas id="pinky-layer" style="position:absolute; z-index: 4;"></canvas>
       <canvas id ="menu-layer" style="position:absolute; z-index: 10;"></canvas>
     </div>
 
