--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <canvas id="score-layer" style="position:absolute; z-index: 2;"></canvas>
       <canvas id="player-layer" style="position:absolute; z-index: 3;"></canvas>
       <canvas id="pinky-layer" style="position:absolute; z-index: 4;"></canvas>
+      <canvas id="inky-layer" style="position:absolute; z-index: 5;"></canvas>
       <canvas id="clyde-layer" style="position:absolute; z-index: 6;"></canvas>
       <canvas id ="menu-layer" style="position:absolute; z-index: 10;"></canvas>
     </div>
